[gd_scene load_steps=6 format=3 uid="uid://bdthy75hm4e2s"]

[ext_resource type="Script" path="res://objects/BoostPad/BoostPad.gd" id="1_qcg6s"]
[ext_resource type="FontFile" uid="uid://6y4nk0acb1db" path="res://assets/fonts/bruce-forever/BruceForeverRegular-X3jd2.ttf" id="2_oapau"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dqbdp"]
albedo_color = Color(1, 0.654902, 0.117647, 1)
emission = Color(1, 0.533333, 0, 1)
emission_energy_multiplier = 7.0

[sub_resource type="TextMesh" id="TextMesh_ku0rx"]
text = "BOOST"
font = ExtResource("2_oapau")
font_size = 13

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_06dut"]
data = PackedVector3Array(-0.2394, -0.01, 0.025, -0.2156, -0.005, 0.025, -0.2328, -0.0206, 0.025, -0.2328, -0.0206, -0.025, -0.2156, -0.005, -0.025, -0.2394, -0.01, -0.025, -0.2394, -0.01, 0.025, -0.2328, 0.0153, 0.025, -0.2156, -0.005, 0.025, -0.2156, -0.005, -0.025, -0.2328, 0.0153, -0.025, -0.2394, -0.01, -0.025, -0.2328, 0.0153, 0.025, -0.2027, 0.0123, 0.025, -0.2156, -0.005, 0.025, -0.2156, -0.005, -0.025, -0.2027, 0.0123, -0.025, -0.2328, 0.0153, -0.025, -0.2328, 0.0153, 0.025, -0.2234, 0.04, 0.025, -0.2027, 0.0123, 0.025, -0.2027, 0.0123, -0.025, -0.2234, 0.04, -0.025, -0.2328, 0.0153, -0.025, -0.2328, -0.0206, 0.025, -0.2234, -0.05, 0.025, -0.2394, -0.03, 0.025, -0.2394, -0.03, -0.025, -0.2234, -0.05, -0.025, -0.2328, -0.0206, -0.025, -0.2328, -0.0206, 0.025, -0.2027, -0.0223, 0.025, -0.2234, -0.05, 0.025, -0.2234, -0.05, -0.025, -0.2027, -0.0223, -0.025, -0.2328, -0.0206, -0.025, -0.2328, -0.0206, 0.025, -0.2156, -0.005, 0.025, -0.2027, -0.0223, 0.025, -0.2027, -0.0223, -0.025, -0.2156, -0.005, -0.025, -0.2328, -0.0206, -0.025, -0.2394, -0.03, 0.025, -0.2234, -0.05, 0.025, -0.2922, -0.03, 0.025, -0.2922, -0.03, -0.025, -0.2234, -0.05, -0.025, -0.2394, -0.03, -0.025, -0.2234, -0.05, 0.025, -0.3195, -0.05, 0.025, -0.2922, -0.03, 0.025, -0.2922, -0.03, -0.025, -0.3195, -0.05, -0.025, -0.2234, -0.05, -0.025, -0.2922, -0.03, 0.025, -0.3195, -0.05, 0.025, -0.2922, -0.01, 0.025, -0.2922, -0.01, -0.025, -0.3195, -0.05, -0.025, -0.2922, -0.03, -0.025, -0.3195, -0.05, 0.025, -0.3195, 0.04, 0.025, -0.2922, -0.01, 0.025, -0.2922, -0.01, -0.025, -0.3195, 0.04, -0.025, -0.3195, -0.05, -0.025, -0.2234, 0.04, 0.025, -0.2328, 0.0153, 0.025, -0.2394, 0.02, 0.025, -0.2394, 0.02, -0.025, -0.2328, 0.0153, -0.025, -0.2234, 0.04, -0.025, -0.3195, 0.04, 0.025, -0.2234, 0.04, 0.025, -0.2922, 0.02, 0.025, -0.2922, 0.02, -0.025, -0.2234, 0.04, -0.025, -0.3195, 0.04, -0.025, -0.2234, 0.04, 0.025, -0.2394, 0.02, 0.025, -0.2922, 0.02, 0.025, -0.2922, 0.02, -0.025, -0.2394, 0.02, -0.025, -0.2234, 0.04, -0.025, -0.2394, 0.01, 0.025, -0.2328, 0.0153, 0.025, -0.2394, -0.01, 0.025, -0.2394, -0.01, -0.025, -0.2328, 0.0153, -0.025, -0.2394, 0.01, -0.025, -0.2922, 0.01, 0.025, -0.2394, 0.01, 0.025, -0.2922, -0.01, 0.025, -0.2922, -0.01, -0.025, -0.2394, 0.01, -0.025, -0.2922, 0.01, -0.025, -0.2394, 0.01, 0.025, -0.2394, -0.01, 0.025, -0.2922, -0.01, 0.025, -0.2922, -0.01, -0.025, -0.2394, -0.01, -0.025, -0.2394, 0.01, -0.025, -0.2922, 0.01, 0.025, -0.2922, -0.01, 0.025, -0.3195, 0.04, 0.025, -0.3195, 0.04, -0.025, -0.2922, -0.01, -0.025, -0.2922, 0.01, -0.025, -0.2922, 0.01, 0.025, -0.3195, 0.04, 0.025, -0.2922, 0.02, 0.025, -0.2922, 0.02, -0.025, -0.3195, 0.04, -0.025, -0.2922, 0.01, -0.025, -0.3195, 0.04, -0.025, -0.2234, 0.04, -0.025, -0.3195, 0.04, 0.025, -0.2234, 0.04, -0.025, -0.2234, 0.04, 0.025, -0.3195, 0.04, 0.025, -0.2234, 0.04, -0.025, -0.2027, 0.0123, -0.025, -0.2234, 0.04, 0.025, -0.2027, 0.0123, -0.025, -0.2027, 0.0123, 0.025, -0.2234, 0.04, 0.025, -0.2027, 0.0123, -0.025, -0.2156, -0.005, -0.025, -0.2027, 0.0123, 0.025, -0.2156, -0.005, -0.025, -0.2156, -0.005, 0.025, -0.2027, 0.0123, 0.025, -0.2156, -0.005, -0.025, -0.2027, -0.0223, -0.025, -0.2156, -0.005, 0.025, -0.2027, -0.0223, -0.025, -0.2027, -0.0223, 0.025, -0.2156, -0.005, 0.025, -0.2027, -0.0223, -0.025, -0.2234, -0.05, -0.025, -0.2027, -0.0223, 0.025, -0.2234, -0.05, -0.025, -0.2234, -0.05, 0.025, -0.2027, -0.0223, 0.025, -0.2234, -0.05, -0.025, -0.3195, -0.05, -0.025, -0.2234, -0.05, 0.025, -0.3195, -0.05, -0.025, -0.3195, -0.05, 0.025, -0.2234, -0.05, 0.025, -0.3195, -0.05, -0.025, -0.3195, 0.04, -0.025, -0.3195, -0.05, 0.025, -0.3195, 0.04, -0.025, -0.3195, 0.04, 0.025, -0.3195, -0.05, 0.025, -0.2394, 0.01, -0.025, -0.2328, 0.0153, -0.025, -0.2394, 0.01, 0.025, -0.2328, 0.0153, -0.025, -0.2328, 0.0153, 0.025, -0.2394, 0.01, 0.025, -0.2328, 0.0153, -0.025, -0.2394, 0.02, -0.025, -0.2328, 0.0153, 0.025, -0.2394, 0.02, -0.025, -0.2394, 0.02, 0.025, -0.2328, 0.0153, 0.025, -0.2394, 0.02, -0.025, -0.2922, 0.02, -0.025, -0.2394, 0.02, 0.025, -0.2922, 0.02, -0.025, -0.2922, 0.02, 0.025, -0.2394, 0.02, 0.025, -0.2922, 0.02, -0.025, -0.2922, 0.01, -0.025, -0.2922, 0.02, 0.025, -0.2922, 0.01, -0.025, -0.2922, 0.01, 0.025, -0.2922, 0.02, 0.025, -0.2922, 0.01, -0.025, -0.2394, 0.01, -0.025, -0.2922, 0.01, 0.025, -0.2394, 0.01, -0.025, -0.2394, 0.01, 0.025, -0.2922, 0.01, 0.025, -0.2394, -0.03, -0.025, -0.2328, -0.0206, -0.025, -0.2394, -0.03, 0.025, -0.2328, -0.0206, -0.025, -0.2328, -0.0206, 0.025, -0.2394, -0.03, 0.025, -0.2328, -0.0206, -0.025, -0.2394, -0.01, -0.025, -0.2328, -0.0206, 0.025, -0.2394, -0.01, -0.025, -0.2394, -0.01, 0.025, -0.2328, -0.0206, 0.025, -0.2394, -0.01, -0.025, -0.2922, -0.01, -0.025, -0.2394, -0.01, 0.025, -0.2922, -0.01, -0.025, -0.2922, -0.01, 0.025, -0.2394, -0.01, 0.025, -0.2922, -0.01, -0.025, -0.2922, -0.03, -0.025, -0.2922, -0.01, 0.025, -0.2922, -0.03, -0.025, -0.2922, -0.03, 0.025, -0.2922, -0.01, 0.025, -0.2922, -0.03, -0.025, -0.2394, -0.03, -0.025, -0.2922, -0.03, 0.025, -0.2394, -0.03, -0.025, -0.2394, -0.03, 0.025, -0.2922, -0.03, 0.025, -0.0997, -0.03, 0.025, -0.0723, -0.0295, 0.025, -0.093, -0.05, 0.025, -0.093, -0.05, -0.025, -0.0723, -0.0295, -0.025, -0.0997, -0.03, -0.025, -0.0997, -0.03, 0.025, -0.0723, 0.0195, 0.025, -0.0723, -0.0295, 0.025, -0.0723, -0.0295, -0.025, -0.0723, 0.0195, -0.025, -0.0997, -0.03, -0.025, -0.0997, -0.03, 0.025, -0.0997, 0.02, 0.025, -0.0723, 0.0195, 0.025, -0.0723, 0.0195, -0.025, -0.0997, 0.02, -0.025, -0.0997, -0.03, -0.025, -0.0997, 0.02, 0.025, -0.093, 0.04, 0.025, -0.0723, 0.0195, 0.025, -0.0723, 0.0195, -0.025, -0.093, 0.04, -0.025, -0.0997, 0.02, -0.025, -0.1686, 0.04, 0.025, -0.093, 0.04, 0.025, -0.1619, 0.02, 0.025, -0.1619, 0.02, -0.025, -0.093, 0.04, -0.025, -0.1686, 0.04, -0.025, -0.093, 0.04, 0.025, -0.0997, 0.02, 0.025, -0.1619, 0.02, 0.025, -0.1619, 0.02, -0.025, -0.0997, 0.02, -0.025, -0.093, 0.04, -0.025, -0.1892, -0.0295, 0.025, -0.1619, -0.03, 0.025, -0.1686, -0.05, 0.025, -0.1686, -0.05, -0.025, -0.1619, -0.03, -0.025, -0.1892, -0.0295, -0.025, -0.1892, -0.0295, 0.025, -0.1892, 0.0195, 0.025, -0.1619, -0.03, 0.025, -0.1619, -0.03, -0.025, -0.1892, 0.0195, -0.025, -0.1892, -0.0295, -0.025, -0.1892, 0.0195, 0.025, -0.1619, 0.02, 0.025, -0.1619, -0.03, 0.025, -0.1619, -0.03, -0.025, -0.1619, 0.02, -0.025, -0.1892, 0.0195, -0.025, -0.1892, 0.0195, 0.025, -0.1686, 0.04, 0.025, -0.1619, 0.02, 0.025, -0.1619, 0.02, -0.025, -0.1686, 0.04, -0.025, -0.1892, 0.0195, -0.025, -0.093, -0.05, 0.025, -0.1686, -0.05, 0.025, -0.0997, -0.03, 0.025, -0.0997, -0.03, -0.025, -0.1686, -0.05, -0.025, -0.093, -0.05, -0.025, -0.1686, -0.05, 0.025, -0.1619, -0.03, 0.025, -0.0997, -0.03, 0.025, -0.0997, -0.03, -0.025, -0.1619, -0.03, -0.025, -0.1686, -0.05, -0.025, -0.093, 0.04, -0.025, -0.0723, 0.0195, -0.025, -0.093, 0.04, 0.025, -0.0723, 0.0195, -0.025, -0.0723, 0.0195, 0.025, -0.093, 0.04, 0.025, -0.0723, 0.0195, -0.025, -0.0723, -0.0295, -0.025, -0.0723, 0.0195, 0.025, -0.0723, -0.0295, -0.025, -0.0723, -0.0295, 0.025, -0.0723, 0.0195, 0.025, -0.0723, -0.0295, -0.025, -0.093, -0.05, -0.025, -0.0723, -0.0295, 0.025, -0.093, -0.05, -0.025, -0.093, -0.05, 0.025, -0.0723, -0.0295, 0.025, -0.093, -0.05, -0.025, -0.1686, -0.05, -0.025, -0.093, -0.05, 0.025, -0.1686, -0.05, -0.025, -0.1686, -0.05, 0.025, -0.093, -0.05, 0.025, -0.1686, -0.05, -0.025, -0.1892, -0.0295, -0.025, -0.1686, -0.05, 0.025, -0.1892, -0.0295, -0.025, -0.1892, -0.0295, 0.025, -0.1686, -0.05, 0.025, -0.1892, -0.0295, -0.025, -0.1892, 0.0195, -0.025, -0.1892, -0.0295, 0.025, -0.1892, 0.0195, -0.025, -0.1892, 0.0195, 0.025, -0.1892, -0.0295, 0.025, -0.1892, 0.0195, -0.025, -0.1686, 0.04, -0.025, -0.1892, 0.0195, 0.025, -0.1686, 0.04, -0.025, -0.1686, 0.04, 0.025, -0.1892, 0.0195, 0.025, -0.1686, 0.04, -0.025, -0.093, 0.04, -0.025, -0.1686, 0.04, 0.025, -0.093, 0.04, -0.025, -0.093, 0.04, 0.025, -0.1686, 0.04, 0.025, -0.0997, 0.02, -0.025, -0.1619, 0.02, -0.025, -0.0997, 0.02, 0.025, -0.1619, 0.02, -0.025, -0.1619, 0.02, 0.025, -0.0997, 0.02, 0.025, -0.1619, 0.02, -0.025, -0.1619, -0.03, -0.025, -0.1619, 0.02, 0.025, -0.1619, -0.03, -0.025, -0.1619, -0.03, 0.025, -0.1619, 0.02, 0.025, -0.1619, -0.03, -0.025, -0.0997, -0.03, -0.025, -0.1619, -0.03, 0.025, -0.0997, -0.03, -0.025, -0.0997, -0.03, 0.025, -0.1619, -0.03, 0.025, -0.0997, -0.03, -0.025, -0.0997, 0.02, -0.025, -0.0997, -0.03, 0.025, -0.0997, 0.02, -0.025, -0.0997, 0.02, 0.025, -0.0997, -0.03, 0.025, 0.0336, -0.03, 0.025, 0.0609, -0.0295, 0.025, 0.0403, -0.05, 0.025, 0.0403, -0.05, -0.025, 0.0609, -0.0295, -0.025, 0.0336, -0.03, -0.025, 0.0336, -0.03, 0.025, 0.0609, 0.0195, 0.025, 0.0609, -0.0295, 0.025, 0.0609, -0.0295, -0.025, 0.0609, 0.0195, -0.025, 0.0336, -0.03, -0.025, 0.0336, -0.03, 0.025, 0.0336, 0.02, 0.025, 0.0609, 0.0195, 0.025, 0.0609, 0.0195, -0.025, 0.0336, 0.02, -0.025, 0.0336, -0.03, -0.025, 0.0336, 0.02, 0.025, 0.0403, 0.04, 0.025, 0.0609, 0.0195, 0.025, 0.0609, 0.0195, -0.025, 0.0403, 0.04, -0.025, 0.0336, 0.02, -0.025, -0.0353, 0.04, 0.025, 0.0403, 0.04, 0.025, -0.0286, 0.02, 0.025, -0.0286, 0.02, -0.025, 0.0403, 0.04, -0.025, -0.0353, 0.04, -0.025, 0.0403, 0.04, 0.025, 0.0336, 0.02, 0.025, -0.0286, 0.02, 0.025, -0.0286, 0.02, -0.025, 0.0336, 0.02, -0.025, 0.0403, 0.04, -0.025, -0.0559, -0.0295, 0.025, -0.0286, -0.03, 0.025, -0.0353, -0.05, 0.025, -0.0353, -0.05, -0.025, -0.0286, -0.03, -0.025, -0.0559, -0.0295, -0.025, -0.0559, -0.0295, 0.025, -0.0559, 0.0195, 0.025, -0.0286, -0.03, 0.025, -0.0286, -0.03, -0.025, -0.0559, 0.0195, -0.025, -0.0559, -0.0295, -0.025, -0.0559, 0.0195, 0.025, -0.0286, 0.02, 0.025, -0.0286, -0.03, 0.025, -0.0286, -0.03, -0.025, -0.0286, 0.02, -0.025, -0.0559, 0.0195, -0.025, -0.0559, 0.0195, 0.025, -0.0353, 0.04, 0.025, -0.0286, 0.02, 0.025, -0.0286, 0.02, -0.025, -0.0353, 0.04, -0.025, -0.0559, 0.0195, -0.025, 0.0403, -0.05, 0.025, -0.0353, -0.05, 0.025, 0.0336, -0.03, 0.025, 0.0336, -0.03, -0.025, -0.0353, -0.05, -0.025, 0.0403, -0.05, -0.025, -0.0353, -0.05, 0.025, -0.0286, -0.03, 0.025, 0.0336, -0.03, 0.025, 0.0336, -0.03, -0.025, -0.0286, -0.03, -0.025, -0.0353, -0.05, -0.025, 0.0403, 0.04, -0.025, 0.0609, 0.0195, -0.025, 0.0403, 0.04, 0.025, 0.0609, 0.0195, -0.025, 0.0609, 0.0195, 0.025, 0.0403, 0.04, 0.025, 0.0609, 0.0195, -0.025, 0.0609, -0.0295, -0.025, 0.0609, 0.0195, 0.025, 0.0609, -0.0295, -0.025, 0.0609, -0.0295, 0.025, 0.0609, 0.0195, 0.025, 0.0609, -0.0295, -0.025, 0.0403, -0.05, -0.025, 0.0609, -0.0295, 0.025, 0.0403, -0.05, -0.025, 0.0403, -0.05, 0.025, 0.0609, -0.0295, 0.025, 0.0403, -0.05, -0.025, -0.0353, -0.05, -0.025, 0.0403, -0.05, 0.025, -0.0353, -0.05, -0.025, -0.0353, -0.05, 0.025, 0.0403, -0.05, 0.025, -0.0353, -0.05, -0.025, -0.0559, -0.0295, -0.025, -0.0353, -0.05, 0.025, -0.0559, -0.0295, -0.025, -0.0559, -0.0295, 0.025, -0.0353, -0.05, 0.025, -0.0559, -0.0295, -0.025, -0.0559, 0.0195, -0.025, -0.0559, -0.0295, 0.025, -0.0559, 0.0195, -0.025, -0.0559, 0.0195, 0.025, -0.0559, -0.0295, 0.025, -0.0559, 0.0195, -0.025, -0.0353, 0.04, -0.025, -0.0559, 0.0195, 0.025, -0.0353, 0.04, -0.025, -0.0353, 0.04, 0.025, -0.0559, 0.0195, 0.025, -0.0353, 0.04, -0.025, 0.0403, 0.04, -0.025, -0.0353, 0.04, 0.025, 0.0403, 0.04, -0.025, 0.0403, 0.04, 0.025, -0.0353, 0.04, 0.025, 0.0336, 0.02, -0.025, -0.0286, 0.02, -0.025, 0.0336, 0.02, 0.025, -0.0286, 0.02, -0.025, -0.0286, 0.02, 0.025, 0.0336, 0.02, 0.025, -0.0286, 0.02, -0.025, -0.0286, -0.03, -0.025, -0.0286, 0.02, 0.025, -0.0286, -0.03, -0.025, -0.0286, -0.03, 0.025, -0.0286, 0.02, 0.025, -0.0286, -0.03, -0.025, 0.0336, -0.03, -0.025, -0.0286, -0.03, 0.025, 0.0336, -0.03, -0.025, 0.0336, -0.03, 0.025, -0.0286, -0.03, 0.025, 0.0336, -0.03, -0.025, 0.0336, 0.02, -0.025, 0.0336, -0.03, 0.025, 0.0336, 0.02, -0.025, 0.0336, 0.02, 0.025, 0.0336, -0.03, 0.025, 0.0939, 0.04, 0.025, 0.1791, 0.02, 0.025, 0.1098, 0.02, 0.025, 0.1098, 0.02, -0.025, 0.1791, 0.02, -0.025, 0.0939, 0.04, -0.025, 0.0939, 0.04, 0.025, 0.1994, 0.04, 0.025, 0.1791, 0.02, 0.025, 0.1791, 0.02, -0.025, 0.1994, 0.04, -0.025, 0.0939, 0.04, -0.025, 0.1788, -0.05, 0.025, 0.0934, -0.03, 0.025, 0.1627, -0.03, 0.025, 0.1627, -0.03, -0.025, 0.0934, -0.03, -0.025, 0.1788, -0.05, -0.025, 0.1788, -0.05, 0.025, 0.0733, -0.05, 0.025, 0.0934, -0.03, 0.025, 0.0934, -0.03, -0.025, 0.0733, -0.05, -0.025, 0.1788, -0.05, -0.025, 0.1994, -0.0192, 0.025, 0.1788, -0.05, 0.025, 0.1692, -0.0206, 0.025, 0.1692, -0.0206, -0.025, 0.1788, -0.05, -0.025, 0.1994, -0.0192, -0.025, 0.1788, -0.05, 0.025, 0.1627, -0.03, 0.025, 0.1692, -0.0206, 0.025, 0.1692, -0.0206, -0.025, 0.1627, -0.03, -0.025, 0.1788, -0.05, -0.025, 0.1794, 0.01, 0.025, 0.1692, -0.0206, 0.025, 0.1625, -0.01, 0.025, 0.1625, -0.01, -0.025, 0.1692, -0.0206, -0.025, 0.1794, 0.01, -0.025, 0.1794, 0.01, 0.025, 0.1994, -0.0192, 0.025, 0.1692, -0.0206, 0.025, 0.1692, -0.0206, -0.025, 0.1994, -0.0192, -0.025, 0.1794, 0.01, -0.025, 0.1098, 0.01, 0.025, 0.1625, -0.01, 0.025, 0.0933, -0.01, 0.025, 0.0933, -0.01, -0.025, 0.1625, -0.01, -0.025, 0.1098, 0.01, -0.025, 0.1098, 0.01, 0.025, 0.1794, 0.01, 0.025, 0.1625, -0.01, 0.025, 0.1625, -0.01, -0.025, 0.1794, 0.01, -0.025, 0.1098, 0.01, -0.025, 0.0733, 0.0145, 0.025, 0.0939, 0.04, 0.025, 0.1033, 0.0152, 0.025, 0.1033, 0.0152, -0.025, 0.0939, 0.04, -0.025, 0.0733, 0.0145, -0.025, 0.0939, 0.04, 0.025, 0.1098, 0.02, 0.025, 0.1033, 0.0152, 0.025, 0.1033, 0.0152, -0.025, 0.1098, 0.02, -0.025, 0.0939, 0.04, -0.025, 0.0933, -0.01, 0.025, 0.1033, 0.0152, 0.025, 0.1098, 0.01, 0.025, 0.1098, 0.01, -0.025, 0.1033, 0.0152, -0.025, 0.0933, -0.01, -0.025, 0.0933, -0.01, 0.025, 0.0733, 0.0145, 0.025, 0.1033, 0.0152, 0.025, 0.1033, 0.0152, -0.025, 0.0733, 0.0145, -0.025, 0.0933, -0.01, -0.025, 0.1794, 0.01, -0.025, 0.1994, -0.0192, -0.025, 0.1794, 0.01, 0.025, 0.1994, -0.0192, -0.025, 0.1994, -0.0192, 0.025, 0.1794, 0.01, 0.025, 0.1994, -0.0192, -0.025, 0.1788, -0.05, -0.025, 0.1994, -0.0192, 0.025, 0.1788, -0.05, -0.025, 0.1788, -0.05, 0.025, 0.1994, -0.0192, 0.025, 0.1788, -0.05, -0.025, 0.0733, -0.05, -0.025, 0.1788, -0.05, 0.025, 0.0733, -0.05, -0.025, 0.0733, -0.05, 0.025, 0.1788, -0.05, 0.025, 0.0733, -0.05, -0.025, 0.0934, -0.03, -0.025, 0.0733, -0.05, 0.025, 0.0934, -0.03, -0.025, 0.0934, -0.03, 0.025, 0.0733, -0.05, 0.025, 0.0934, -0.03, -0.025, 0.1627, -0.03, -0.025, 0.0934, -0.03, 0.025, 0.1627, -0.03, -0.025, 0.1627, -0.03, 0.025, 0.0934, -0.03, 0.025, 0.1627, -0.03, -0.025, 0.1692, -0.0206, -0.025, 0.1627, -0.03, 0.025, 0.1692, -0.0206, -0.025, 0.1692, -0.0206, 0.025, 0.1627, -0.03, 0.025, 0.1692, -0.0206, -0.025, 0.1625, -0.01, -0.025, 0.1692, -0.0206, 0.025, 0.1625, -0.01, -0.025, 0.1625, -0.01, 0.025, 0.1692, -0.0206, 0.025, 0.1625, -0.01, -0.025, 0.0933, -0.01, -0.025, 0.1625, -0.01, 0.025, 0.0933, -0.01, -0.025, 0.0933, -0.01, 0.025, 0.1625, -0.01, 0.025, 0.0933, -0.01, -0.025, 0.0733, 0.0145, -0.025, 0.0933, -0.01, 0.025, 0.0733, 0.0145, -0.025, 0.0733, 0.0145, 0.025, 0.0933, -0.01, 0.025, 0.0733, 0.0145, -0.025, 0.0939, 0.04, -0.025, 0.0733, 0.0145, 0.025, 0.0939, 0.04, -0.025, 0.0939, 0.04, 0.025, 0.0733, 0.0145, 0.025, 0.0939, 0.04, -0.025, 0.1994, 0.04, -0.025, 0.0939, 0.04, 0.025, 0.1994, 0.04, -0.025, 0.1994, 0.04, 0.025, 0.0939, 0.04, 0.025, 0.1994, 0.04, -0.025, 0.1791, 0.02, -0.025, 0.1994, 0.04, 0.025, 0.1791, 0.02, -0.025, 0.1791, 0.02, 0.025, 0.1994, 0.04, 0.025, 0.1791, 0.02, -0.025, 0.1098, 0.02, -0.025, 0.1791, 0.02, 0.025, 0.1098, 0.02, -0.025, 0.1098, 0.02, 0.025, 0.1791, 0.02, 0.025, 0.1098, 0.02, -0.025, 0.1033, 0.0152, -0.025, 0.1098, 0.02, 0.025, 0.1033, 0.0152, -0.025, 0.1033, 0.0152, 0.025, 0.1098, 0.02, 0.025, 0.1033, 0.0152, -0.025, 0.1098, 0.01, -0.025, 0.1033, 0.0152, 0.025, 0.1098, 0.01, -0.025, 0.1098, 0.01, 0.025, 0.1033, 0.0152, 0.025, 0.1098, 0.01, -0.025, 0.1794, 0.01, -0.025, 0.1098, 0.01, 0.025, 0.1794, 0.01, -0.025, 0.1794, 0.01, 0.025, 0.1098, 0.01, 0.025, 0.2242, 0.02, 0.025, 0.2041, 0.04, 0.025, 0.2513, 0.02, 0.025, 0.2513, 0.02, -0.025, 0.2041, 0.04, -0.025, 0.2242, 0.02, -0.025, 0.2041, 0.04, 0.025, 0.3259, 0.04, 0.025, 0.2513, 0.02, 0.025, 0.2513, 0.02, -0.025, 0.3259, 0.04, -0.025, 0.2041, 0.04, -0.025, 0.2788, 0.02, 0.025, 0.2788, -0.05, 0.025, 0.2513, 0.02, 0.025, 0.2513, 0.02, -0.025, 0.2788, -0.05, -0.025, 0.2788, 0.02, -0.025, 0.2788, -0.05, 0.025, 0.2513, -0.05, 0.025, 0.2513, 0.02, 0.025, 0.2513, 0.02, -0.025, 0.2513, -0.05, -0.025, 0.2788, -0.05, -0.025, 0.2788, 0.02, 0.025, 0.2513, 0.02, 0.025, 0.3259, 0.04, 0.025, 0.3259, 0.04, -0.025, 0.2513, 0.02, -0.025, 0.2788, 0.02, -0.025, 0.2788, 0.02, 0.025, 0.3259, 0.04, 0.025, 0.3058, 0.02, 0.025, 0.3058, 0.02, -0.025, 0.3259, 0.04, -0.025, 0.2788, 0.02, -0.025, 0.2041, 0.04, -0.025, 0.3259, 0.04, -0.025, 0.2041, 0.04, 0.025, 0.3259, 0.04, -0.025, 0.3259, 0.04, 0.025, 0.2041, 0.04, 0.025, 0.3259, 0.04, -0.025, 0.3058, 0.02, -0.025, 0.3259, 0.04, 0.025, 0.3058, 0.02, -0.025, 0.3058, 0.02, 0.025, 0.3259, 0.04, 0.025, 0.3058, 0.02, -0.025, 0.2788, 0.02, -0.025, 0.3058, 0.02, 0.025, 0.2788, 0.02, -0.025, 0.2788, 0.02, 0.025, 0.3058, 0.02, 0.025, 0.2788, 0.02, -0.025, 0.2788, -0.05, -0.025, 0.2788, 0.02, 0.025, 0.2788, -0.05, -0.025, 0.2788, -0.05, 0.025, 0.2788, 0.02, 0.025, 0.2788, -0.05, -0.025, 0.2513, -0.05, -0.025, 0.2788, -0.05, 0.025, 0.2513, -0.05, -0.025, 0.2513, -0.05, 0.025, 0.2788, -0.05, 0.025, 0.2513, -0.05, -0.025, 0.2513, 0.02, -0.025, 0.2513, -0.05, 0.025, 0.2513, 0.02, -0.025, 0.2513, 0.02, 0.025, 0.2513, -0.05, 0.025, 0.2513, 0.02, -0.025, 0.2242, 0.02, -0.025, 0.2513, 0.02, 0.025, 0.2242, 0.02, -0.025, 0.2242, 0.02, 0.025, 0.2513, 0.02, 0.025, 0.2242, 0.02, -0.025, 0.2041, 0.04, -0.025, 0.2242, 0.02, 0.025, 0.2041, 0.04, -0.025, 0.2041, 0.04, 0.025, 0.2242, 0.02, 0.025)

[node name="BoostPad" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
collision_layer = 2
script = ExtResource("1_qcg6s")

[node name="BoostPadText" type="MeshInstance3D" parent="."]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_dqbdp")
mesh = SubResource("TextMesh_ku0rx")

[node name="BoostPadCollisionRotate" type="CollisionShape3D" parent="."]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_06dut")

[node name="BoostPadCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_06dut")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
